Fixes z-index for Audience

--- a/src/components/templates/PartyMap/components/Map/Map.scss
+++ b/src/components/templates/PartyMap/components/Map/Map.scss
@@ -117,6 +117,7 @@ $border-radius: 28px;
       width: 100%;
       height: 100%;
       border-radius: 100%;
+      z-index: 12;
     }
   }
 
